--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "high-flyer-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,3 +14,4 @@
     "high-flyer-bot": "file:"
   }
 }
+
